appId: com.bithyve.tribe.dev
---
- addMedia:
    - "../../assets/icon-tribe.png"
- assertVisible:
    id: "btn-edit-profile"
- tapOn:
    id: "btn-edit-profile"
- assertVisible:
    id: "btn_back"
- assertVisible:
    id: "btn_edit_wallet_pic"
- tapOn:
    id: "btn_edit_wallet_pic"
- assertVisible:
    id: "app-text-Edit-profile-picture"
- assertVisible:
    id: "btn_select_profile_menu_choose_photo"
- assertVisible:
    id: "btn_select_profile_menu_delete_photo"
- tapOn:
    id: "btn_select_profile_menu_choose_photo"
- tapOn:
    text: "^Photo taken on.*"
- tapOn:
    id: "menu_crop"
- tapOn:
    id: "primary_cta_Save"
